@@ -1,2 +1,18 @@
+Author: Mehmood Yar Baig
+
+**Description:**
+The Tip Calculator app from Section 12.5 does not need a Button to perform its calculations. Re-implement this app to use property listeners to perform the calculations whenever the user modifies the bill amount or changes the custom tip percentage. Also use a property binding to update the Label that displays the tip percentage.
+
+**Download the JavaFX SDK:** https://gluonhq.com/products/javafx/
+
+**Add JavaFX library:** File -> Project Structure -> Libraries -> add library path->C:\javafx-sdk-11.0.2\lib
+
+**Add VM Options:** Run-> Edit Configuration -> modify options -> add vm options --module-path %PATH_TO_JAVAFX_SDK/LIB% --add-modules javafx.controls,javafx.fxml
+
+
+**ScreenShots:**
+
+
 ![image](https://user-images.githubusercontent.com/48985550/119387392-b467c200-bcea-11eb-984f-01057b39670c.png)
+
 ![image](https://user-images.githubusercontent.com/48985550/119387431-c21d4780-bcea-11eb-9d0f-168f18e7be9b.png)
